# ToyLang

./: .gitignore  TestInput  ToyLang.cabal  notes.txt
src/: Lexer.x  Main.hs  Parser.y  SemanticAnalysis.hs  SemanticChecks.hs  Typecheck.hs  Types.hs
