name:                 ToyLang
version:              0.1.0.0
synopsis:             A toy language for playing with Haskell
-- description:
-- license:
-- license-file:
homepage:
author:               Greg
maintainer:           ganders@cs.utexas.edu
category:             Language
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable ToyLang
  main-is:              Main.hs
  build-tools:          alex
  other-modules:        Lexer
  -- other-extensions:
  build-depends:        base >= 4.7 && < 5
  hs-source-dirs:       src
  default-language:     Haskell2010
